maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis = trouverBis(0,H,L)
  val yBis = trouverBis(1,H,L)
    // Your code here
}

def trouverBis(i:Int,H:Int,L:Int):Int = {
  // i = 0 pour x, 1 pour y
  var x:Int = 0
  var y:Int = 0
  for ( x <- 0 to 10) {
    for (y <- 0 to 10){
      if (aBiscuit(x,y)){
        i match{
          case 0 => return x 
          case 1 => return y
        }
      }
    }
  }
}